[package]
name = "blue-prince-solvers"
version = "0.1.0"
edition = "2024"

[lib]
name = "blue_prince_solvers"
path = "src/lib.rs"

[[bin]]
name = "vault-box-solver"
path = "src/bin/vault_box_53_solver.rs"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"

[dev-dependencies]
proptest = "1.6.0"